UI: Fixed SVG not showing up on safari browser

--- a/app/public/css/global.css
+++ b/app/public/css/global.css
@@ -429,6 +429,11 @@ button {
     cursor: pointer;
 }
 
+svg {
+    height: 100%;
+    width: 100%;
+}
+
 /* TOPBAR */
 
 .topbar-82618--listType {
